# AlphaSim

./: CMakeLists.txt  EvalEdepTree.cpp  FormMTree  FormMeasuredTree.cpp  GetHistogram.cpp  README  alphasim.cc  alphasim.in  vis.mac
include/: DetectorConstruction.hh  DetectorMessenger.hh  HistoManager.hh  PrimaryGeneratorAction.hh  RunAction.hh
macros/: 148Gd.mac  232Th.mac  238U_chain_stepbystep.mac  238U_full_chain.mac  241Am.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  HistoManager.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
src/legacy/: DetectorConstruction.cc  legacy_log.txt
